Fixed bugs that ScrollBar does not behavior correctly and its layout is not positioned as expected. Improve Menu's border.

--- a/sources/net.sf.j2s.java.org.eclipse.swt/src/org/eclipse/swt/widgets/Menu.css
+++ b/sources/net.sf.j2s.java.org.eclipse.swt/src/org/eclipse/swt/widgets/Menu.css
@@ -1,6 +1,8 @@
 .menu-default {
 	position:absolute;
-	border:1px outset white;
+	border-width:2px;
+	border-style:groove solid solid groove;
+	border-color:white gray gray white;
 	background-color:menu;
 	font-family:Tahoma, Arial, sans-serif;
 	font-size:8pt;
